# dbecho

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/dbecho/: __init__.py  __main__.py  config.py  db.py  server.py
tests/: test_config.py  test_db.py  test_server.py
