[project]
name = "dbecho"
version = "0.1.0"
description = "MCP server for multi-database PostgreSQL analytics. Ask your databases questions in natural language."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "psycopg[binary]>=3.1.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.scripts]
dbecho = "dbecho:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/dbecho"]

[tool.pytest.ini_options]
testpaths = ["tests"]
